[package]
name = "gigafold"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
argon2 = "0.5"
sled = "0.34"
object_store = "0.10"
tokio-util = "0.7"
tauri = { version = "2.0", features = [] }
